# lcppwt

./: .gitignore
books/googletest/slackbuild/gtest/: gtest.info
books/modern_c++_with_tdd/: README.md  soundex.md
books/modern_c++_with_tdd/cpputest/c2/: CMakeLists.txt
books/modern_c++_with_tdd/cpputest/c2-2/: CMakeLists.txt
books/modern_c++_with_tdd/cpputest/c2-3/: CMakeLists.txt  SoundexTest.cpp
books/modern_c++_with_tdd/mycode/c2/: .gdb_history  CMakeLists.txt  Soundex.h  SoundexTest.cpp  go.sh
books/modern_c++_with_tdd/mycode/c2/11/: CMakeLists.txt
books/modern_c++_with_tdd/mycode/c2/40/: CMakeLists.txt
unit_testing_tools/: go.sh
unit_testing_tools/cpputest/: installation.md
unit_testing_tools/cpputest/c2/: CMakeLists.txt
